--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven {
+            url "https://maven.google.com" // specifically this worked
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+//        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +20,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
+        maven {
+            url "https://maven.google.com" // specifically this worked
+        }
     }
 }
 
