--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     compile 'com.zhy:autolayout:1.4.5'
     //    compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.jaeger.statusbaruitl:library:1.3.5'
-    compile 'org.litepal.android:core:1.5.0'
+    compile 'org.litepal.android:core:1.6.1'
+//    implementation 'org.litepal.android:java:3.0.0'
     compile 'com.google.zxing:core:3.2.1'
     compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
     compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
